--- a/app/css/directives/linechart.less
+++ b/app/css/directives/linechart.less
@@ -114,6 +114,16 @@
     padding: 20px;
     height: 100%;
     width: 100%;
+
+    .legend {
+        .legend-item {
+            margin-top: 5px;
+
+            &:nth-child(2) {
+                margin-top: 10px;
+            }
+        }
+    }
 }
 
 .axis {
