--- a/app/css/directives/queryResultsTable.less
+++ b/app/css/directives/queryResultsTable.less
@@ -14,10 +14,6 @@
 //
 //
 
-.count-header {
-    margin: 5px 0px;
-}
-
 .data-tray {
     h4 {
         &.pull-left {
@@ -77,9 +73,6 @@
             > label{
                 @media (max-width: 767px) {
                     float: none !important;
-                    display: block;
-                    margin-top: 0;
-                    margin-left: 0;
                 }
             }
         }
@@ -102,33 +95,83 @@
     }
 }
 
+.navbar-item-forms {
+    margin-top: 5px;
+}
+
 .query-results-directive {
     margin: 0px;
     height: 100%;
     width: 100%;
-
-    .chart-options {
-        // Align with the Sort By and Limit items.
-        margin-top: 3px;
-        margin-left: 10px;
-    }
-
-    .query-results-options {
-        // Set a lower position for the popover due to the extra top margin added to chart-options.
-        top: 48px;
-    }
-}
-.query-results-directive {
-
 }
 
 .query-results-grid {
-    min-height: 125px;
-    margin: 10px 0;
     background-color: @main-background;
     border: @border;
     border-radius: 2px;
     box-shadow: 0 1px 4px @shadow;
+    box-sizing: content-box;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+
+    &:before, &:after {
+        box-sizing: content-box;
+        -webkit-box-sizing: content-box;
+        -moz-box-sizing: content-box;
+    }
+
+    *, *:before, *:after {
+        box-sizing: content-box;
+        -webkit-box-sizing: content-box;
+        -moz-box-sizing: content-box;
+    }
+
+    .form-inline {
+        .form-group {
+            &:first-child {
+                > label {
+                    margin-left: 0px;
+                }
+            }
+
+            > label {
+                margin-left: 10px;
+                margin-right: 5px;
+            }
+
+            input[type="number"] {
+                width: 100px;
+            }
+
+            .btn-group {
+                label {
+                    &.btn {
+                        margin-right: 0px;
+                    }
+                }
+            }
+        }
+
+        .form-input-group {
+            display: inline-block;
+            margin-bottom: 0;
+            vertical-align: middle;
+
+            &:first-child {
+                > label {
+                    margin-left: 0px;
+                }
+            }
+
+            > label {
+                margin-left: 10px;
+                margin-right: 5px;
+                float: left;
+                margin-top: 9px;
+                margin-right: 10px;
+            }
+        }
+    }
 
     .slick-row{
         background: @main-background-lighten;
@@ -144,10 +187,27 @@
         .slick-header-column{
             color: @mid-text-color;
             background: @main-background-darken;
+            cursor: pointer;
 
             &.ui-state-hover{
                 color: @accent-bright;
                 background: @light-background;
+
+                .remove-column-button {
+                    color: #999999;
+                    background: #FFFFFF;
+
+                    &:focus, &:hover {
+                        color: #39B54A;
+                        background: #FFFFFF;
+                    }
+                }
+            }
+
+            .remove-column-button {
+                color: #999999;
+                position: absolute;
+                right: 5px;
             }
         }
 
@@ -161,14 +221,6 @@
         }
     }
 }
-.query-results-grid {
-
-}
-.query-results-grid, .query-results-grid:before, .query-results-grid:after, .query-results-grid *, .query-results-grid *:before, .query-results-grid *:after {
-    box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-}
 
 .slick-sort-indicator {
     float: none;
@@ -176,10 +228,6 @@
 
 .tray {
     .container {
-        .count-header {
-            margin-top: 10px;
-        }
-
         .query-results-grid {
             min-height: 200px;
             height: 300px;
