--- a/app/css/variables.less
+++ b/app/css/variables.less
@@ -27,6 +27,9 @@
 @shadow-border: 1px solid @shadow;
 
 
+@button-color: #DDDDDD;
+
+
 @chart-text-color: #444444;
 @chart-axis-color: #CCCCCC;
 @light-chart-axis-color: #EEEEEE;
