--- a/app/css/directives/directedGraph.less
+++ b/app/css/directives/directedGraph.less
@@ -22,6 +22,13 @@ div {
     .directed-graph {
         height: @widget-height;
         width: @widget-width;
+
+        div {
+            .directed-graph-container {
+                height: @widget-height;
+                width: @widget-width;
+            }
+        }
     }
 
     .draw-button-div {
