--- a/app/css/directives/heatMap.less
+++ b/app/css/directives/heatMap.less
@@ -37,19 +37,40 @@
         border-radius: 5px;
         color: @mid-text-color;
         font-size: 14px;
-        margin: 2px;
+        margin-top: 0px;
+        margin-right: 2px;
         opacity: .8;
         padding: 3px;
     }
 
-    .map-field-form {
-        padding: 20px 20px 10px 50px;
-        position: absolute;
-        width: 100%;
-        z-index: 1000;
+    .chart-options {
+        .popover {
+            top: 20px;
+            right: -20px;
+            position: absolute;
+            z-index: 1000;
+        }
+    }
 
-        .filter-reset{
-            margin-right: 10px;
+    .footer-container {
+        position: absolute;
+        bottom: 15px;
+        left: 20px;
+        right: 20px;
+        z-index: 1000;
+    }
+
+    .header-container {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        right: 20px;
+        z-index: 1005;
+
+        .filter-container {
+            top: 50px;
+            left: 60px;
+            z-index: 1000;
         }
     }
 
@@ -83,7 +104,7 @@
     }
 
     .olControlZoom {
-        top: 20px;
+        top: 50px;
         left: 20px;
 
         a {
@@ -97,18 +118,6 @@
                 background-color: @accent-bright;
                 opacity: 1;
             }
-        }
-    }
-}
-
-.well-map{
-    padding: 0;
-
-    .chart-options {
-        .popover {
-            top: 45px;
-            position: absolute;
-            z-index: 1000;
         }
     }
 }
