--- a/app/css/directives/sunburst.less
+++ b/app/css/directives/sunburst.less
@@ -14,10 +14,6 @@
 //
 //
 
-.sunburst-aggregate-controls {
-    margin: 0px 0px 10px 0px;
-}
-
 .sunburst-breadcrumb {
     display: inline;
     margin: 0px 3px;
@@ -49,33 +45,33 @@
     }
 }
 
-.sunburst-ring-controls  {
+.sunburst-controls  {
     width:100%;
     margin-bottom: 10px;
 }
 
 .sunburst-tooltip {
-  position:absolute;
-  top: 5px;
-  left:5px;
-  z-index: 10000;
-  padding: 10px;
-  background-color: @tooltip-background;
-  border: @shadow-border;
-  border-radius: 4px;
-  box-shadow: 0 6px 12px @shadow;
-  pointer-events: none;
-  color: @mid-text-color;
-  opacity: 0;
+    position:absolute;
+    top: 5px;
+    left:5px;
+    z-index: 10000;
+    padding: 10px;
+    background-color: @tooltip-background;
+    border: @shadow-border;
+    border-radius: 4px;
+    box-shadow: 0 6px 12px @shadow;
+    pointer-events: none;
+    color: @mid-text-color;
+    opacity: 0;
 }
 
 .sunburst-tooltip-title {
-  font-weight: bold;
-  font-size: 18px;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 .sunburst-tooltip-field {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .sunburst-transient-breadcrumb {
@@ -84,11 +80,12 @@
 
     &:hover, &:focus {
         .breadcrumb-title {
-          color: @error-dark-color;
+            color: @error-dark-color;
+            cursor: pointer;
         }
 
         .breadcrumb-remove {
-          display: inline;
+            display: inline;
         }
     }
 
@@ -99,6 +96,7 @@
     .breadcrumb-remove {
         color: @error-dark-color;
         display: none;
+        cursor: pointer;
         text-decoration: none;
     }
 }
