NEON-1324 converting merge css to less

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -84,7 +84,7 @@ label{
 }
 
 .btn-default {
-    color: @mid-text-color;
+    color: @main-text-color;
 
     &:focus{
         border-color: @border-color;
