Minor changes to the styling of the filter notifications in the various visualizations.

--- a/app/css/directives/countBy.css
+++ b/app/css/directives/countBy.css
@@ -109,7 +109,7 @@
     padding: 0;
 }
 
-.countByDirective span.glyphicon:focus,
-.countByDirective span.glyphicon:hover {
+.countByDirective .count-by-grid span.glyphicon:focus,
+.countByDirective .count-by-grid span.glyphicon:hover {
     color: #39b54a;
 }
