--- a/app/css/style.css
+++ b/app/css/style.css
@@ -291,32 +291,37 @@ fieldset[disabled] .btn-primary.active {
     color: #777777;
     color: rgba(0,0,0,0.5);
     background-color: #DDDDDD;
-    padding-left: 11px;
     border-radius: 4px;
-    font-size: 12px;
     margin-left: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
-.filter-reset .btn {
-    border: 0;
+.filter-reset .filter-label {
+    float: left;
+    font-size: 10px;
     padding: 8px;
-    color: #C2360D;
-    border-left: 1px solid #CCCCCC;
-    border-radius: 0 4px 4px 0;
-    margin-left: 7px;
-    line-height: 1;
+    max-width: 80px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
-.filter-reset .btn:hover {
+.filter-reset .glyphicon-remove {
+    float: left;
+    font-size: 14px;
+    padding: 8px;
+    color: #C2360D;
+    cursor: pointer;
+    border-left: 1px solid #CCCCCC;
+    border-radius: 0 4px 4px 0;
+    top: 0px;
+}
+
+.filter-reset .glyphicon-remove:hover {
     background-color: #C2360D;
     border-color: #AA1E13;
     color: #FFFFFF;
-}
-
-.filter-reset .btn .glyphicon {
-    font-size: 12px;
 }
 
 /* Chart dropdown menu */
