--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -31,11 +31,9 @@
 <div class="clearfix"></div>
 
 <div class="header-container filter-container">
-    <div class="filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]">
-        {{filterSet.key}}={{filterSet.value}}
-      <a class="btn" ng-click="clearFilterSet()">
-        <span class="glyphicon glyphicon-remove"></span>
-      </a>
+    <div class="filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]" title="{{filterSet.key}}={{filterSet.value}}">
+        <span class="filter-label">{{filterSet.key}}={{filterSet.value}}</span>
+        <span class="glyphicon glyphicon-remove" ng-click="clearFilterSet()"></span>
     </div>
 
     <div class="legend">
