--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -44,11 +44,9 @@
 <div class="clearfix"></div>
 
 <div class="header-container filter-container" ng-show="(filteredNodes.length > 0)">
-    <div class="filter-reset pull-right" ng-repeat="value in filteredNodes">
-        {{value}}
-        <a class="btn" ng-click="removeFilter(value)">
-         <span class="glyphicon glyphicon-remove"></span>
-        </a>
+    <div class="filter-reset pull-right" ng-repeat="value in filteredNodes" title="{{options.selectedNodeField}}={{value}}">
+        <span class="filter-label">{{options.selectedNodeField}}={{value}}</span>
+        <span class="glyphicon glyphicon-remove" ng-click="removeFilter(value)"></span>
     </div>
 </div>
 
