--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -2,12 +2,15 @@
     <span class="header-text pull-left">{{options.selectedTable.name}}</span>
 
     <options-menu parent-element="element">
-        <div class="form-group">
+        <div class="form-group" ng-show="(hideAdvancedOptions)">
+            <label>No Options Available</label>
+        </div>
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Table</label>
             <select class="form-control" ng-model="options.selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForData()">
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Count Field</label>
             <select class="form-control" ng-model="options.countField" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields">
                 <option disabled selected value="">Please choose a field</option>
