--- a/app/partials/directives/heatMap.html
+++ b/app/partials/directives/heatMap.html
@@ -2,19 +2,19 @@
     <span class="header-text pull-left">{{options.selectedTable.name}}</span>
 
     <options-menu parent-element="element" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
-        <div class="form-group">
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Table</label>
             <select class="form-control" ng-model="options.selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForMapData()">
             </select>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Latitude</label>
             <select class="form-control" ng-model="options.latitudeField" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
             </select>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Longitude</label>
             <select class="form-control" ng-model="options.longitudeField" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
             </select>
@@ -49,14 +49,14 @@
             <div class="clearfix"></div>
         </div>
 
-        <div class="form-group" ng-show="(options.showPoints)">
+        <div class="form-group" ng-show="!(hideAdvancedOptions) && (options.showPoints)">
             <label>Size by</label>
             <select class="form-control" ng-model="options.sizeByField" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields">
                 <option value="">No selection</option>
             </select>
         </div>
 
-        <div class="form-group" ng-show="(options.showPoints)">
+        <div class="form-group" ng-show="!(hideAdvancedOptions) && (options.showPoints)">
             <label>Color by</label>
             <select class="form-control" ng-model="options.colorByField" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields">
                 <option value="">No selection</option>
