NEON-1494 Users can now aggregate by minimum or maximum value in the Line Chart.  Made some minor changes to the styling of the Line Chart and Bar Chart.

--- a/app/css/directives/linechart.css
+++ b/app/css/directives/linechart.css
@@ -83,8 +83,8 @@
     margin-top: 5px;
 }
 
-/* Add extra margin to the top of the legend (the first category item) to mimic the styling of the BarChart. */
-.linechartDirective .legend .legend-item:nth-child(2) {
+/* Add extra margin to the top of the legend (the first item) to mimic the styling of the BarChart. */
+.linechartDirective .legend .legend-item:first-child {
     margin-top: 10px;
 }
 
