--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -1,7 +1,7 @@
 <div class="header-container">
     <span class="header-text pull-left">{{options.selectedTable.name}}</span>
 
-    <options-menu parent-element="element">
+    <options-menu parent-element="element" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
         <div class="form-group" ng-show="(hideAdvancedOptions)">
             <label>No Options Available</label>
         </div>
@@ -21,6 +21,8 @@
                 <option value="count">Count</option>
                 <option value="sum">Sum</option>
                 <option value="average">Average</option>
+                <option value="min">Minimum</option>
+                <option value="max">Maximum</option>
             </select>
         </div>
         <div class="form-group" ng-show="!(hideAdvancedOptions) && (options.aggregation !== 'count')">
@@ -30,7 +32,7 @@
         </div>
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Group Field</label>
-            <select class="form-control" ng-model="options.categoryField" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
+            <select class="form-control" ng-model="options.categoryField" ng-options="field for field in fields" ng-disabled="!(fields.length > 0)">
                 <option value="">None</option>
             </select>
         </div>
@@ -41,14 +43,10 @@
 
 <div class="header-container filter-container">
     <div class="legend">
-        <div class="legend-item" ng-class="{true: '', false: 'hidden'}[colorMappings.length >= seriesLimit]">
-            <span class="legend-text text-muted"><strong>Top {{seriesLimit}}</strong></span>
-        </div>
-
-        <div class="legend-item legend-item-clickable" title="{{colorMapping.series}}" ng-repeat="colorMapping in colorMappings" ng-click="toggleSeries(colorMapping.series)" ng-class="{true: 'legend-hidden', false: ''}[colorMapping.hidden]">
+        <div class="legend-item legend-item-clickable" title="{{colorMapping.series}} {{getLegendItemAggregationText(colorMapping)}}" ng-repeat="colorMapping in colorMappings" ng-click="toggleSeries(colorMapping.series)" ng-class="{true: 'legend-hidden', false: ''}[colorMapping.hidden]">
             <span class="legend-icon" style="background-color: {{colorMapping.color}}"></span>
             <span class="legend-text">{{colorMapping.series}}</span>
-            <span ng-show="options.aggregation != 'average'" class="legend-count text-muted">({{colorMapping.total | numberShort}})</span>
+            <span class="legend-text legend-text-small">{{getLegendItemAggregationText(colorMapping)}}</span>
         </div>
     </div>
 </div>
