--- a/app/css/directives/map.css
+++ b/app/css/directives/map.css
@@ -14,9 +14,9 @@
  *
  */
 
-.chart-options .popover.map-options {
-    top: 25px;
-    right: -15px;
+.map-container .chart-options .popover {
+    top: 20px;
+    right: -20px;
     position: absolute;
     z-index: 1000;
 }
@@ -33,7 +33,8 @@
     border-radius: 5px;
     color: #555555;
     font-size: 14px;
-    margin: 2px;
+    margin-top: 0px;
+    margin-right: 2px;
     opacity: .8;
     padding: 3px;
 }
@@ -43,12 +44,21 @@
     top: 20px;
     left: 20px;
     right: 20px;
+    z-index: 1005;
+}
+
+.map-container .header-container.filter-container {
+    top: 50px;
+    left: 60px;
     z-index: 1000;
 }
 
-.map-container .header-container.second-header {
-    top: 50px;
-    left: 60px;
+.map-container .footer-container {
+    position: absolute;
+    bottom: 15px;
+    left: 20px;
+    right: 20px;
+    z-index: 1000;
 }
 
 .map-container .alert {
@@ -87,6 +97,19 @@
 
 .map-container .olControlZoom a:hover{
     background-color: rgba(57, 181, 74, 1);
+}
+
+.heatmap .olPopup {
+    font-size: 12px;
+    z-index: 1060;
+}
+
+.heatmap .olPopup table {
+    margin: 2px;
+}
+
+.heatmap .olPopup td, .olPopup th {
+    padding: 2px;
 }
 
 .visualization-widget-mobile .map-container .olMap {
