NEON-1324 adding missing less changes

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -5,8 +5,9 @@
     margin-right: 0px !important;
 }
 
-@import 'fonts.less';
 @import 'errorStyle.less';
+@import 'fonts.less';
+@import 'popupStyle.less';
 @import 'style.less';
 
 // directives
