--- a/app/css/style.less
+++ b/app/css/style.less
@@ -451,7 +451,7 @@ label{
         background-color: @main-background;
         padding: 10px;
         border-radius: 4px;
-        margin-top: 10px;
+        margin: 5px 0px;
 
         .form-group{
             margin-right: 5px;
@@ -607,7 +607,7 @@ label{
         color: @mid-text-color;
         display: inline-block;
         margin-right: 10px;
-        margin-top: 5px;
+        margin-top: 10px;
         font-size: 12px;
 
         &.legend-hidden{
