--- a/app/css/directives/map.css
+++ b/app/css/directives/map.css
@@ -99,16 +99,16 @@
     background-color: rgba(57, 181, 74, 1);
 }
 
-.heatmap .olPopup {
+.map-container .olPopup {
     font-size: 12px;
     z-index: 1060;
 }
 
-.heatmap .olPopup table {
+.map-container .olPopup table {
     margin: 2px;
 }
 
-.heatmap .olPopup td, .olPopup th {
+.map-container .olPopup td, .olPopup th {
     padding: 2px;
 }
 
